--- a/labs-ios-starter/MapScreen/MapScreen.storyboard
+++ b/labs-ios-starter/MapScreen/MapScreen.storyboard
@@ -17,57 +17,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H9B-7W-I8t">
-                                <rect key="frame" x="20" y="54" width="34" height="30"/>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <action selector="backButtonPressed:" destination="ZX6-zN-gSw" eventType="touchUpInside" id="xda-f6-rdu"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NRC-ob-9vH">
-                                <rect key="frame" x="267" y="54" width="127" height="34"/>
+                                <rect key="frame" x="20" y="84" width="127" height="34"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="5QZ-hu-4Or">
-                                <rect key="frame" x="20" y="108" width="374" height="269"/>
+                                <rect key="frame" x="20" y="138" width="374" height="269"/>
                             </mapView>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="0.089999999999999997" translatesAutoresizingMaskIntoConstraints="NO" id="FSG-R6-Fac">
-                                <rect key="frame" x="56" y="393" width="302" height="31"/>
+                                <rect key="frame" x="56" y="423" width="302" height="31"/>
                                 <connections>
                                     <action selector="zoomChangedValue:" destination="ZX6-zN-gSw" eventType="valueChanged" id="7I2-LU-Jaa"/>
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9jV-Hw-Mms" userLabel="Zoom Out">
-                                <rect key="frame" x="20" y="397" width="18" height="22"/>
+                                <rect key="frame" x="20" y="427" width="18" height="22"/>
                                 <state key="normal" image="minus" catalog="system"/>
                                 <connections>
                                     <action selector="zoomOutPressed:" destination="ZX6-zN-gSw" eventType="touchUpInside" id="6df-u4-wd7"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NiB-2i-nrF" userLabel="Zoom In">
-                                <rect key="frame" x="376" y="397" width="18" height="22"/>
+                                <rect key="frame" x="376" y="427" width="18" height="22"/>
                                 <state key="normal" image="plus" catalog="system"/>
                                 <connections>
                                     <action selector="zoomInPressed:" destination="ZX6-zN-gSw" eventType="touchUpInside" id="Vaa-da-Wpl"/>
                                 </connections>
                             </button>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hOY-ft-eM1">
-                                <rect key="frame" x="0.0" y="439" width="414" height="80"/>
+                                <rect key="frame" x="0.0" y="469" width="414" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="Kiu-dj-lrk"/>
                                 </constraints>
                             </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oh3-6n-IEg">
-                                <rect key="frame" x="111.5" y="539" width="191" height="30"/>
+                                <rect key="frame" x="111.5" y="569" width="191" height="30"/>
                                 <state key="normal" title="Search for Points of Interest"/>
                                 <connections>
                                     <action selector="poiChosen" destination="ZX6-zN-gSw" eventType="touchUpInside" id="dTJ-rR-6c9"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Vl-KN-dUE">
-                                <rect key="frame" x="20" y="589" width="374" height="253"/>
+                                <rect key="frame" x="20" y="619" width="374" height="223"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="poiCell" id="P2A-iq-YF3" customClass="POITableViewCell" customModule="labs_ios_starter" customModuleProvider="target">
@@ -96,11 +89,31 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JOp-jZ-oKz">
+                                <rect key="frame" x="177" y="64" width="60" height="6"/>
+                                <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="6" id="3b8-N0-Z1e"/>
+                                    <constraint firstAttribute="width" constant="60" id="Fk2-kn-1MR"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTp-E1-eqo">
+                                <rect key="frame" x="357" y="84" width="37" height="30"/>
+                                <state key="normal" title="Done"/>
+                                <connections>
+                                    <action selector="doneButtonPressed:" destination="ZX6-zN-gSw" eventType="touchUpInside" id="GJz-q4-nFo"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="H9E-Ns-GRf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="H9E-Ns-GRf" firstAttribute="trailing" secondItem="NRC-ob-9vH" secondAttribute="trailing" constant="20" id="22j-Vb-p3X"/>
                             <constraint firstItem="5QZ-hu-4Or" firstAttribute="leading" secondItem="H9E-Ns-GRf" secondAttribute="leading" constant="20" id="43w-tL-dQf"/>
                             <constraint firstItem="hOY-ft-eM1" firstAttribute="top" secondItem="NiB-2i-nrF" secondAttribute="bottom" constant="20" id="6ff-Sr-DeB"/>
                             <constraint firstItem="H9E-Ns-GRf" firstAttribute="trailing" secondItem="NiB-2i-nrF" secondAttribute="trailing" constant="20" id="IqE-Tq-3zI"/>
@@ -111,19 +124,22 @@
                             <constraint firstItem="H9E-Ns-GRf" firstAttribute="trailing" secondItem="5QZ-hu-4Or" secondAttribute="trailing" constant="20" id="OmS-4y-43j"/>
                             <constraint firstItem="FSG-R6-Fac" firstAttribute="centerY" secondItem="9jV-Hw-Mms" secondAttribute="centerY" id="QTb-Ej-GIP"/>
                             <constraint firstItem="Oh3-6n-IEg" firstAttribute="centerX" secondItem="AU7-yg-V0I" secondAttribute="centerX" id="SZP-U3-ogk"/>
-                            <constraint firstItem="NRC-ob-9vH" firstAttribute="top" secondItem="H9E-Ns-GRf" secondAttribute="top" constant="10" id="UUr-fj-CeO"/>
+                            <constraint firstItem="NRC-ob-9vH" firstAttribute="top" secondItem="H9E-Ns-GRf" secondAttribute="top" constant="40" id="UUr-fj-CeO"/>
                             <constraint firstItem="5QZ-hu-4Or" firstAttribute="height" secondItem="AU7-yg-V0I" secondAttribute="height" multiplier="0.3" id="YDO-2d-P77"/>
                             <constraint firstItem="9jV-Hw-Mms" firstAttribute="leading" secondItem="H9E-Ns-GRf" secondAttribute="leading" constant="20" id="YGl-Z2-9yM"/>
                             <constraint firstItem="6Vl-KN-dUE" firstAttribute="leading" secondItem="H9E-Ns-GRf" secondAttribute="leading" constant="20" id="a5w-if-wpH"/>
+                            <constraint firstItem="JOp-jZ-oKz" firstAttribute="centerX" secondItem="AU7-yg-V0I" secondAttribute="centerX" id="bnh-O2-SPW"/>
                             <constraint firstItem="H9E-Ns-GRf" firstAttribute="trailing" secondItem="6Vl-KN-dUE" secondAttribute="trailing" constant="20" id="cVR-cS-dgo"/>
                             <constraint firstItem="H9E-Ns-GRf" firstAttribute="bottom" secondItem="6Vl-KN-dUE" secondAttribute="bottom" constant="20" id="cqV-bn-FT6"/>
                             <constraint firstItem="5QZ-hu-4Or" firstAttribute="top" secondItem="NRC-ob-9vH" secondAttribute="bottom" constant="20" id="cv1-Ye-uMj"/>
-                            <constraint firstItem="H9B-7W-I8t" firstAttribute="top" secondItem="H9E-Ns-GRf" secondAttribute="top" constant="10" id="fKf-wi-dKJ"/>
+                            <constraint firstItem="JOp-jZ-oKz" firstAttribute="top" secondItem="H9E-Ns-GRf" secondAttribute="top" constant="20" id="eWK-4g-SOk"/>
                             <constraint firstItem="Oh3-6n-IEg" firstAttribute="top" secondItem="hOY-ft-eM1" secondAttribute="bottom" constant="20" id="fis-OR-p8e"/>
                             <constraint firstItem="9jV-Hw-Mms" firstAttribute="top" secondItem="5QZ-hu-4Or" secondAttribute="bottom" constant="20" id="jr6-Rd-xeO"/>
+                            <constraint firstItem="cTp-E1-eqo" firstAttribute="top" secondItem="H9E-Ns-GRf" secondAttribute="top" constant="40" id="lG2-Ie-Ygz"/>
                             <constraint firstItem="FSG-R6-Fac" firstAttribute="leading" secondItem="9jV-Hw-Mms" secondAttribute="trailing" constant="20" id="pY5-TV-yXa"/>
                             <constraint firstItem="hOY-ft-eM1" firstAttribute="leading" secondItem="H9E-Ns-GRf" secondAttribute="leading" id="sOm-ab-VFL"/>
-                            <constraint firstItem="H9B-7W-I8t" firstAttribute="leading" secondItem="H9E-Ns-GRf" secondAttribute="leading" constant="20" id="sgL-w8-tJC"/>
+                            <constraint firstItem="H9E-Ns-GRf" firstAttribute="trailing" secondItem="cTp-E1-eqo" secondAttribute="trailing" constant="20" id="sSH-Co-8fC"/>
+                            <constraint firstItem="NRC-ob-9vH" firstAttribute="leading" secondItem="H9E-Ns-GRf" secondAttribute="leading" constant="20" id="zix-o9-pJL"/>
                         </constraints>
                     </view>
                     <connections>
@@ -144,6 +160,9 @@
         <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
