--- a/labs-ios-starter/HomeScreen/HomeScreen.storyboard
+++ b/labs-ios-starter/HomeScreen/HomeScreen.storyboard
@@ -93,7 +93,7 @@
                                                         <constraint firstAttribute="height" constant="120" id="pVf-tr-IGX"/>
                                                     </constraints>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K34-25-4yF">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K34-25-4yF">
                                                     <rect key="frame" x="0.0" y="0.0" width="150" height="120"/>
                                                     <string key="text">San Francisco,
 CA</string>
